--- a/public/css/site.css
+++ b/public/css/site.css
@@ -1,6 +1,6 @@
 
 .parallax {
-  min-height: 600px;
+  min-height: 400px;
   background-attachment: fixed;
   background-size: cover;
 }
@@ -360,7 +360,7 @@ body {
   .shout {
     color: white!important;
     font-family: 'Yrsa', serif;
-    font-size: 10rem;
+    font-size: 8rem;
     margin-top:4rem;
   }
   .shout-less {
@@ -446,4 +446,41 @@ body {
 
 .ribbon:after {
     right: 0
+}
+
+.demo-wrapper {
+  width: 38%;
+  margin: 0 auto;
+}
+.html5-fullscreen-api {
+  position: relative;
+}
+.html5-fullscreen-api img {
+  max-width: 100%;
+  border: 10px solid #fff;
+  box-shadow: 0px 0px 50px #ccc;
+}
+.html5-fullscreen-api .fs-button {
+  z-index: 100;
+  display: inline-block;
+  width: 32px;
+  height: 32px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+}
+
+.html5-fullscreen-api .fs-button:after {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  font-size: 32px;
+  font-family: 'ModernPictogramsNormal';
+  color: rgba(255,255,255,.5);
+  cursor: pointer;
+  content: "v";
+}
+.html5-fullscreen-api .fs-button:hover:after {
+  color: rgb(255,255,255);
 }
