--- a/public/css/site.css
+++ b/public/css/site.css
@@ -240,9 +240,6 @@ video {
   font-size:smaller;
 }
 
-.carousel-inner { padding-bottom:80px; }
-
-
 .carousel-control-prev, .carousel-control-next, .carousel-indicators li {
   background-color: hsla(0, 93%, 31%, 0.98)
 }
@@ -448,39 +445,27 @@ body {
     right: 0
 }
 
-.demo-wrapper {
-  width: 38%;
-  margin: 0 auto;
-}
-.html5-fullscreen-api {
-  position: relative;
-}
-.html5-fullscreen-api img {
-  max-width: 100%;
-  border: 10px solid #fff;
-  box-shadow: 0px 0px 50px #ccc;
-}
-.html5-fullscreen-api .fs-button {
-  z-index: 100;
+#share {
   display: inline-block;
-  width: 32px;
-  height: 32px;
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  cursor: pointer;
+  float: none;
 }
-
-.html5-fullscreen-api .fs-button:after {
-  display: inline-block;
-  width: 100%;
-  height: 100%;
-  font-size: 32px;
-  font-family: 'ModernPictogramsNormal';
-  color: rgba(255,255,255,.5);
-  cursor: pointer;
-  content: "v";
+.covid-19 {
+  background-color: purple;
+  min-height: 50px;
+  margin-top: 56px;
+  color: white;
+  font-size: 1.2rem;
+  padding-top: 10px;
 }
-.html5-fullscreen-api .fs-button:hover:after {
-  color: rgb(255,255,255);
+.white {
+  color: white;
+}
+.carousel-pad {
+  padding-left: 0px!important;
+  padding-right: 0px!important;
+}
+@media (min-width: 688px) {
+    .carousel-item>img {
+        max-height: 600px;
+    }
 }
