--- a/public/css/site.css
+++ b/public/css/site.css
@@ -321,7 +321,7 @@ body {
   .shout {
     color: white!important;
     font-family: 'Yrsa', serif;
-    font-size: 8rem;
+    font-size: 4rem;
     margin-top:4rem;
   }
   .shout-less {
@@ -420,6 +420,7 @@ body {
   color: white;
   font-size: 1.2rem;
   padding-top: 10px;
+  padding-bottom: 10px
 }
 .white {
   color: white;
