Add blockquote css

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -465,3 +465,12 @@ ul#floor-plans {
   width: 100%;
   -moz-columns: 2;
 }
+blockquote {
+  font-size: 1.25rem;
+    font-weight: 500;
+    letter-spacing: .02em;
+    line-height: 1.4;
+    border-left: .3125rem solid #9c27b0;
+    margin-bottom: 1rem;
+    padding: 0 1rem;
+}
