--- a/public/css/site.css
+++ b/public/css/site.css
@@ -508,3 +508,7 @@ blockquote {
         margin:auto;
         width: 100%; // Add this
         }
+.map {
+  min-height: 400px;
+  max-height: 400px;
+}
