--- a/public/css/site.css
+++ b/public/css/site.css
@@ -44,13 +44,13 @@
   }
   .shout {
     color: white!important;
-    font-family: 'Yrsa', serif;
+    font-family: 'Lato', sans-serif;
     font-size: 3.5rem;
     margin-top:3rem;
   }
   .shout-less {
     color: white!important;
-    font-family: 'Yrsa', serif;
+    font-family: 'Lato', sans-serif;
     font-size: 2rem;
   }
   /* .jumbotron {
@@ -68,7 +68,7 @@ footer, .chip-icon {
 
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Lato', sans-serif;
   background-color: #eee;
 
 }
@@ -334,13 +334,13 @@ body {
 @media screen and (min-width: 440px) {
   .shout {
     color: white!important;
-    font-family: 'Yrsa', serif;
+    font-family: 'Lato', sans-serif;
     font-size: 8rem;
     margin-top:4rem;
   }
   .shout-less {
     color: white!important;
-    font-family: 'Yrsa', serif;
+    font-family: 'Lato', sans-serif;
     font-size: 4rem;
   }
 }
