Change colour for covid 19 banner

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -421,7 +421,7 @@ body {
   float: none;
 }
 .covid-19 {
-  background-color: purple;
+  background-color: #731200;
   min-height: 50px;
   margin-top: 56px;
   color: white;
