Change blockquote colour

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -474,7 +474,7 @@ blockquote {
     font-weight: 500;
     letter-spacing: .02em;
     line-height: 1.4;
-    border-left: .3125rem solid #9c27b0;
+    border-left: .3125rem solid #731200;
     margin-bottom: 1rem;
     padding: 0 1rem;
 }
