Change badge colour

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -523,3 +523,7 @@ input#query::placeholder {
 .search-results {
   min-height: 200px;
 }
+.badge-wine {
+    background-color: #731200;
+    color: #fff;
+}
