--- a/public/css/site.css
+++ b/public/css/site.css
@@ -57,7 +57,9 @@ footer, .chip-icon {
 .bg-black {
   background-color: #000000!important;
 }
-
+.bg-fade {
+  background-image: linear-gradient(to right, rgba(255,0,0,0), rgb(115, 18, 0));
+}
 
 body {
   font-family: 'Lato', sans-serif;
