Change table font size

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -606,3 +606,7 @@ input#query::placeholder {
 figcaption.figure-caption.text-right {
   font-size: 1rem;
 }
+.table tbody td, .table tbody th {
+  font-size: 1.1rem;
+
+}
