--- a/public/css/site.css
+++ b/public/css/site.css
@@ -615,3 +615,6 @@ figcaption.figure-caption.text-right {
 .text-muted {
     color: rgba(0, 0, 0, 0.85)!important;
 }
+btn.btn.btn-wine.m-1 a {
+    color: white!important;
+}
