--- a/public/css/site.css
+++ b/public/css/site.css
@@ -1,10 +1,11 @@
 
 .parallax {
-  min-height: 400px;
+  min-height: 300px;
   background-attachment: fixed;
   background-size: cover;
 }
 .jumbotron{
+  margin-top: 30px;
   margin-bottom: 0;
 }
 
