--- a/public/css/site.css
+++ b/public/css/site.css
@@ -643,3 +643,14 @@ img.img-fluid.twitter {
     padding-left: 0px !important;
     padding-right: 0px !important;
 }
+
+@media only screen and (max-width: 1024px) {
+  .head {
+      background-attachment: scroll !important;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .head {
+      background-attachment: scroll !important;
+  }
+}
