--- a/public/css/site.css
+++ b/public/css/site.css
@@ -654,3 +654,45 @@ img.img-fluid.twitter {
       background-attachment: scroll !important;
   }
 }
+@media (orientation: portrait) {
+    .carousel-item.active,
+    .carousel-item-next,
+    .carousel-item-prev {
+        display: block;
+        width:100%;
+        height:auto;
+    }
+}
+
+@media (orientation: landscape) {
+    .carousel-item.active,
+    .carousel-item-next,
+    .carousel-item-prev {
+        display: block;
+        width:100%;
+        height:auto;
+    }
+}
+
+
+
+.carousel-inner {
+  /* make sure your .items will get correct height */
+  height: 100%;
+}
+
+.carousel-item {
+  background-size: cover;
+  background-position: 50% 50%;
+  width: 100%;
+  height: 100%;
+}
+
+.carousel-item  img {
+  visibility: hidden;
+}
+
+.negative-padding {
+    margin-left: -20px !important;
+    margin-right: -20px !important;
+}
