--- a/public/css/site.css
+++ b/public/css/site.css
@@ -217,17 +217,11 @@ video {
   font-size: 1.5rem;
 }
 
-.carousel-control-prev, .carousel-control-next, .carousel-indicators li {
-  background-color: hsla(0, 93%, 31%, 0.98);
-}
 #sponsors img {
   margin-bottom: 10px;
 }
 
-.carousel-item img {
-  min-width: auto;
-  max-height:auto;
-}
+
 
 .badge-wine {
   background-color: #731200;
@@ -451,11 +445,6 @@ body {
   padding-left: 0px!important;
   padding-right: 0px!important;
 }
-@media (min-width: 688px) {
-  .carousel-item>img {
-    max-height: 600px;
-  }
-}
 
 .cropped-image img {
   object-fit: cover;
@@ -506,15 +495,7 @@ blockquote {
 .card, .shadow-sm {
   box-shadow: none!important;
 }
-.carousel-inner>.item>img, .carousel-inner>.item>a>img {
-  display: block;
-  height: auto;
-  max-width: 100%;
-  min-height: 600px;
-  line-height: 1;
-  margin:auto;
-  width: 100%; // Add this
-}
+
 .map {
   min-height: 400px;
   max-height: 400px;
@@ -649,43 +630,6 @@ img.img-fluid.twitter {
       background-attachment: scroll !important;
   }
 }
-@media (orientation: portrait) {
-    .carousel-item.active,
-    .carousel-item-next,
-    .carousel-item-prev {
-        display: block;
-        width:100%;
-        height:auto;
-    }
-}
-
-@media (orientation: landscape) {
-    .carousel-item.active,
-    .carousel-item-next,
-    .carousel-item-prev {
-        display: block;
-        width:100%;
-        height:auto;
-    }
-}
-
-
-
-.carousel-inner {
-  /* make sure your .items will get correct height */
-  height: 100%;
-}
-
-.carousel-item {
-  background-size: cover;
-  background-position: 50% 50%;
-  width: 100%;
-  height: 100%;
-}
-
-.carousel-item  img {
-  visibility: hidden;
-}
 
 .negative-padding {
     margin-left: -20px !important;
@@ -717,19 +661,41 @@ ul.logos-sponsors li {
 .col-md-6.mb-3.mt-3.mx-auto.d-block.book {
     margin-top: 100px!important;
 }
-.pagination {
-  background-color: #f5f5f5;
-  display: -ms-flexbox;
-  display: flex;
-  list-style: none;
-  padding: 0.625rem 0.5rem;
+
+
+#carouselPeriods .card {
+  min-height: 380px;
 }
-.pagination-lg .page-link {
-  font-size: 0.9375rem;
-  padding: 0.78125rem 1rem;
+@media (max-width: 768px) {
+    .carousel-inner .carousel-item > div {
+        display: none;
+    }
+    .carousel-inner .carousel-item > div:first-child {
+        display: block;
+    }
 }
 
-.pagination-sm .page-link {
-  font-size: 0.8125rem;
-  padding: 0.59375rem 1rem;
+.carousel-inner .carousel-item.active,
+.carousel-inner .carousel-item-next,
+.carousel-inner .carousel-item-prev {
+    display: flex;
+}
+
+/* display 3 */
+@media (min-width: 768px) {
+
+    .carousel-inner .carousel-item-right.active,
+    .carousel-inner .carousel-item-next {
+      transform: translateX(33.333%);
+    }
+
+    .carousel-inner .carousel-item-left.active,
+    .carousel-inner .carousel-item-prev {
+      transform: translateX(-33.333%);
+    }
+}
+
+.carousel-inner .carousel-item-right,
+.carousel-inner .carousel-item-left{
+  transform: translateX(0);
 }
