Big update for  card layouts

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -699,3 +699,19 @@ ul.logos-sponsors li {
 .carousel-inner .carousel-item-left{
   transform: translateX(0);
 }
+a
+{
+    position: relative;
+}
+
+a:before {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #FFF;
+  visibility: hidden;
+  transition: all 0.3s ease-in-out;
+}
