--- a/public/css/site.css
+++ b/public/css/site.css
@@ -699,19 +699,30 @@ ul.logos-sponsors li {
 .carousel-inner .carousel-item-left{
   transform: translateX(0);
 }
-a
-{
-    position: relative;
+h3 > a {
+  position: relative;
+  color: #000;
+  text-decoration: none !important;
 }
 
-a:before {
+h3 > a:hover {
+  color: #000;
+}
+
+h3 > a::before {
   content: "";
   position: absolute;
-  width: 0;
+  width: 100%;
   height: 2px;
   bottom: 0;
   left: 0;
-  background-color: #FFF;
+  background-color: #000;
   visibility: hidden;
-  transition: all 0.3s ease-in-out;
+  transform: scaleX(0);
+  transition: all 0.3s ease-in-out 0s;
+}
+
+h3 > a:hover::before {
+  visibility: visible;
+  transform: scaleX(1);
 }
