Make landing page better 1. Add parallax x 4 2. Add context slider 3. Amend css

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -666,6 +666,9 @@ ul.logos-sponsors li {
 #carouselPeriods .card {
   min-height: 380px;
 }
+#carouselContexts .card {
+  min-height: 380px;
+}
 @media (max-width: 768px) {
     .carousel-inner .carousel-item > div {
         display: none;
