Add research associations

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -67,7 +67,7 @@ footer, .chip-icon {
 }
 
 body {
-  font-family: 'IBM Plex Sans', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
   background-color: #97816224;
 
 }
