--- a/public/css/site.css
+++ b/public/css/site.css
@@ -67,7 +67,8 @@ footer, .chip-icon {
 }
 
 body {
-  font-family: 'Ubuntu', sans-serif;
+  /* font-family: 'Ubuntu', sans-serif; */
+  font-family: 'Lato', sans-serif;
   background-color: #97816224;
 
 }
