Footer and tweet panels

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -741,3 +741,7 @@ h3 > a:hover::before {
 .navbar-dark .navbar-nav .nav-link {
     color: #f5f5f5!important;
 }
+
+p.small-font {
+  font-size: 1rem!important;
+}
