--- a/public/css/site.css
+++ b/public/css/site.css
@@ -475,11 +475,9 @@ ul#floor-plans {
   -moz-columns: 2;
 }
 blockquote {
-  font-size: 1.25rem;
-  letter-spacing: .02em;
-  line-height: 1.4;
-  border-left: .3125rem solid #731200;
+  font-size: 1.1rem;
   margin-bottom: 1rem;
+  font-family: 'Merriweather', serif;
   padding: 0 1rem;
 }
 
