--- a/public/css/site.css
+++ b/public/css/site.css
@@ -429,7 +429,7 @@ body {
   padding-bottom: 10px
 }
 .beta {
-  background-color: ##a3c1ad;
+  background-color: #a3c1ad;
   min-height: 50px;
   color: #000;
   font-size: 1.2rem;
