--- a/public/css/site.css
+++ b/public/css/site.css
@@ -54,7 +54,7 @@
 }
 
 footer, .chip-icon {
-  background-color: #a3c1ad ;
+  background-color: #fff ;
 }
 
 .bg-black {
@@ -803,4 +803,7 @@ img.results_image__thumbnail {
 }
 .collections li {
   list-style: square;
+}
+ul.text-center.conversation-footer {
+  padding-inline-start: 0px!important;
 }
