Add show/hide transcript

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -810,3 +810,9 @@ ul.text-center.conversation-footer {
 .libsyn {
   min-height: 90px!important;
 }
+[data-toggle="collapse"].collapsed .if-not-collapsed {
+  display: none;
+}
+[data-toggle="collapse"]:not(.collapsed) .if-collapsed {
+  display: none;
+}
