--- a/public/css/site.css
+++ b/public/css/site.css
@@ -10,18 +10,18 @@
 }
 
 #coverVideo {
- 	height:300px;
-    width:100%;
- 	  position:relative;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    overflow:hidden;
+  height:300px;
+  width:100%;
+  position:relative;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  overflow:hidden;
 }
- #contentVideo {
-	flex:0;
-	min-height:100%;
-	min-width:100%;
+#contentVideo {
+  flex:0;
+  min-height:100%;
+  min-width:100%;
 }
 
 .humancontent {
@@ -33,15 +33,15 @@ h3.hc {
   font-size: 3rem;
 }
 .btn-btnBook {
-    border: 1px solid #fff;
-    color: #fff;
-    padding: 14px 28px;
-    font-size: 16px;
-    cursor: pointer;
-    background-color: grey;
+  border: 1px solid #fff;
+  color: #fff;
+  padding: 14px 28px;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: grey;
 }
 button.btn.btn-btnBook a {
-    color: white;
+  color: white;
 }
 .absolute-bottom {
   position : absolute;
@@ -86,9 +86,6 @@ button.btn.btn-btnBook a {
   .shout-less {
     font-size: 2rem;
   }
-  /* .jumbotron {
-  display: none;
-  } */
 }
 
 footer, .chip-icon {
@@ -256,21 +253,16 @@ video {
 #sponsors img {
   margin-bottom: 10px;
 }
-
-
-
 .badge-wine {
   background-color: #731200;
   color: #fff;
   padding: 10px;
 }
-
 .btn-wine {
   background-color: #731200;
   color: #fff;
   padding: 10px;
 }
-
 .max-coffins {
   max-width: 100%;
 }
@@ -626,14 +618,14 @@ figcaption.figure-caption.text-right {
 
 }
 .text-muted {
-    color: rgba(0, 0, 0, 0.85)!important;
+  color: rgba(0, 0, 0, 0.85)!important;
 }
 btn.btn.btn-wine.m-1 a {
-    color: white!important;
+  color: white!important;
 }
 
 span.btn.btn-wine.m-1.p-2.share a {
-    color: white!important;
+  color: white!important;
 }
 
 img.img-fluid.twitter {
@@ -645,24 +637,24 @@ img.img-fluid.twitter {
   list-style: square;
 }
 .container-fluid.remove {
-    padding-left: 0px !important;
-    padding-right: 0px !important;
+  padding-left: 0px !important;
+  padding-right: 0px !important;
 }
 
 @media only screen and (max-width: 1024px) {
   .head, .parallax {
-      background-attachment: scroll !important;
+    background-attachment: scroll !important;
   }
 }
 @media only screen and (max-width: 768px) {
   .head, .parallax {
-      background-attachment: scroll !important;
+    background-attachment: scroll !important;
   }
 }
 
 .negative-padding {
-    margin-left: -20px !important;
-    margin-right: -20px !important;
+  margin-left: -20px !important;
+  margin-right: -20px !important;
 }
 .carousel-caption {
   position: static !important;
@@ -674,21 +666,21 @@ img.img-fluid.twitter {
 
 @media (max-width: 480px)
 ul.logos-sponsors li {
-    display: block;
-    list-style: none;
-    padding: 10px;
-    text-align: center!important;
+  display: block;
+  list-style: none;
+  padding: 10px;
+  text-align: center!important;
 }
 
 .logos-sponsors img {
-    height: 86px;
-    margin-right: 10px;
-    margin-bottom: 10px;
-    display: inline-block;
+  height: 86px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  display: inline-block;
 }
 
 .col-md-6.mb-3.mt-3.mx-auto.d-block.book {
-    margin-top: 100px!important;
+  margin-top: 100px!important;
 }
 
 
@@ -699,32 +691,32 @@ ul.logos-sponsors li {
   min-height: 380px;
 }
 @media (max-width: 768px) {
-    .carousel-inner .carousel-item > div {
-        display: none;
-    }
-    .carousel-inner .carousel-item > div:first-child {
-        display: block;
-    }
+  .carousel-inner .carousel-item > div {
+    display: none;
+  }
+  .carousel-inner .carousel-item > div:first-child {
+    display: block;
+  }
 }
 
 .carousel-inner .carousel-item.active,
 .carousel-inner .carousel-item-next,
 .carousel-inner .carousel-item-prev {
-    display: flex;
+  display: flex;
 }
 
 /* display 3 */
 @media (min-width: 768px) {
 
-    .carousel-inner .carousel-item-right.active,
-    .carousel-inner .carousel-item-next {
-      transform: translateX(33.333%);
-    }
+  .carousel-inner .carousel-item-right.active,
+  .carousel-inner .carousel-item-next {
+    transform: translateX(33.333%);
+  }
 
-    .carousel-inner .carousel-item-left.active,
-    .carousel-inner .carousel-item-prev {
-      transform: translateX(-33.333%);
-    }
+  .carousel-inner .carousel-item-left.active,
+  .carousel-inner .carousel-item-prev {
+    transform: translateX(-33.333%);
+  }
 }
 
 .carousel-inner .carousel-item-right,
@@ -734,6 +726,16 @@ ul.logos-sponsors li {
 h3 > a {
   position: relative;
   color: #000;
+  text-decoration: none !important;
+}
+
+h3.hc > a:hover {
+  color: #fff;
+}
+
+h3.hc > a {
+  position: relative;
+  color: #fff;
   text-decoration: none !important;
 }
 
@@ -767,14 +769,14 @@ h3 > a:hover::before {
   color: #000;
 }
 .social_box ul {
-    list-style: none;
+  list-style: none;
 }
 .social_box li {
   display: inline;
   margin
 }
 .navbar-dark .navbar-nav .nav-link {
-    color: #f5f5f5!important;
+  color: #f5f5f5!important;
 }
 
 p.small-font {
@@ -824,8 +826,8 @@ a.free_ticket  {
   height: 100%;
   width: auto;
   -webkit-transform: translate(-50%,-50%);
-      -ms-transform: translate(-50%,-50%);
-          transform: translate(-50%,-50%);
+  -ms-transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%);
 }
 .twitter__thumbnail img.portrait {
   width: 100%;
