--- a/public/css/site.css
+++ b/public/css/site.css
@@ -100,7 +100,7 @@ footer, .chip-icon {
 }
 
 body {
-  font-family: 'Lato', sans-serif;
+  font-family: 'Rubik', sans-serif;
   background-color: #97816224;
 
 }
