--- a/public/css/site.css
+++ b/public/css/site.css
@@ -503,7 +503,7 @@ ul#floor-plans {
 blockquote {
   font-size: 1.1rem;
   margin-bottom: 1rem;
-  font-family: 'Merriweather', serif;
+  font-family: 'Arbutus Slab', serif;
   padding: 0 1rem;
 }
 
