--- a/public/css/site.css
+++ b/public/css/site.css
@@ -799,6 +799,44 @@ h2 > a:hover::before {
   transform: scaleX(1);
 }
 
+h5 > a {
+  position: relative;
+  color: #000;
+  text-decoration: none !important;
+}
+
+h5.hc > a:hover {
+  color: #fff;
+}
+
+h5.hc > a {
+  position: relative;
+  color: #fff;
+  text-decoration: none !important;
+}
+
+h5 > a:hover {
+  color: #000;
+}
+
+h5 > a::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #000;
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: all 0.3s ease-in-out 0s;
+}
+
+h5 > a:hover::before {
+  visibility: visible;
+  transform: scaleX(1);
+}
+
 .free_ticket a {
   color: #000!important;
 }
