--- a/public/css/site.css
+++ b/public/css/site.css
@@ -38,7 +38,7 @@ h3.hc {
   padding: 14px 28px;
   font-size: 16px;
   cursor: pointer;
-  background-color: grey;
+  background-color: black;
 }
 button.btn.btn-btnBook a {
   color: white;
