--- a/public/css/site.css
+++ b/public/css/site.css
@@ -1,6 +1,6 @@
 
 .parallax {
-  min-height: 500px;
+  min-height: 55vh;
   background-attachment: fixed;
   background-size: cover;
   margin-top: 0px!important;
