Change card bg-color

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -16,6 +16,9 @@
 [aria-expanded="true"] > .collapsed {
   display: none;
 }
+.card-header {
+  background-color: white;
+}
 #coverVideo {
   height:300px;
   width:100%;
