Add better border color

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -10,6 +10,7 @@
 }
 .btn-info {
   background-color: #0f7290!important;
+  border-color: #0f7290!important;
 }
 .text-info {
   color: #0f7290!important;
