Change bg colour

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -125,7 +125,7 @@ footer, .chip-icon {
 
 body {
   font-family: 'Roboto', sans-serif;
-  background-color: #f7f4f4;
+  background-color: #fff;
   font-size: 1rem;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
