Update font weight

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -106,6 +106,8 @@ button.btn.btn-btnBook a {
   }
   .shout {
     font-size: 2.6rem;
+    font-weight: 500;
+
   }
   .shout-less {
     font-size: 2rem;
