--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -1123,31 +1123,51 @@ ul.logos-sponsors li {
     a.text-center.btn.btn-outline-light.btn__book {
         border: 4px solid white;
     }
+
     .copyright {
-        position:relative;
+        position: relative;
     }
-.copyright-text {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-}
-.hockney-title {
-    font-size: 3.3rem;
-}
-.hockney-subtitle {
-    font-size:1.4rem;
-}
 
-.hockney-dates {
-    font-size:1.2rem
-}
+    .copyright-text {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+    }
 
-.hockney_sub {
-    margin-left:-30px; margin-right:-30px;
-}
-.hockney_header {
-    min-height:40vh; background-color:#179d41;
-}
-.hockney_top_banner{
-    min-height:40vh; margin-top: 60px;background-color:#179d41;
-}
+    .hockney-title {
+        font-size: 3.3rem;
+    }
+
+    .hockney-subtitle {
+        font-size: 1.4rem;
+    }
+
+    .hockney-dates {
+        font-size: 1.2rem
+    }
+
+    .hockney_sub {
+        margin-left: -30px;
+        margin-right: -30px;
+    }
+
+    .hockney_header {
+        min-height: 40vh;
+        background-color: #179d41;
+    }
+
+    .hockney_top_banner {
+        min-height: 40vh;
+        margin-top: 60px;
+        background-color: #179d41;
+    }
+
+    .hockney__link a {
+        text-decoration: none;
+        color: white;
+    }
+
+    .hockney__link a:hover,.hockney__link a:visited,.hockney__link a:focus {
+        text-decoration: none;
+        color: white;
+    }
